fix overflow

--- a/src/style/css/custom.css
+++ b/src/style/css/custom.css
@@ -14,7 +14,7 @@
 @import url('../vendor/iziModal-master/iziModal.css');
 @import url('../vendor/selectize.js/selectize.css');
 
-body{
+html,body{
   overflow-x: hidden !important;
 }
 blockquote {
